@@ -480,13 +480,14 @@ for you.
 
 </para><para>
 
-The <literal>auto</literal> boot label is not yet defined on all
-architectures. The same effect may be achieved by simply adding the two
-parameters <literal>auto=true priority=critical</literal> to the kernel
-command line.  The <literal>auto</literal> parameter is an alias for
-<literal>auto-install/enable</literal> and controls the delay of the
-locale and keyboard questions until after there has been a chance to
-preseed them, while <literal>priority</literal> is an alias for
+The <literal>auto</literal> boot label is not yet defined everywhere.
+The same effect may be achieved by simply adding the two parameters
+<literal>auto=true priority=critical</literal> to the kernel command
+line.  The <literal>auto</literal> parameter is an alias for
+<literal>auto-install/enable</literal> and setting it to
+<literal>true</literal> delays the locale and keyboard questions until
+after there has been a chance to preseed them, while
+<literal>priority</literal> is an alias for
 <literal>debconf/priority</literal> and setting it to
 <literal>critical</literal> stops any questions with a lower priority
 from being asked.
